--- a/team.html
+++ b/team.html
@@ -32,9 +32,14 @@
             from { opacity: 0; transform: scale(0.9); }
             to { opacity: 1; transform: scale(1); }
         }
+        @keyframes float {
+            0%, 100% { transform: translateY(0px); }
+            50% { transform: translateY(-10px); }
+        }
         .animate-fadeInUp { animation: fadeInUp 0.8s ease-out forwards; }
         .animate-fadeIn { animation: fadeIn 1s ease-out forwards; }
         .animate-scaleIn { animation: scaleIn 0.6s ease-out forwards; }
+        .animate-float { animation: float 3s ease-in-out infinite; }
         .stagger-1 { animation-delay: 0.1s; opacity: 0; }
         .stagger-2 { animation-delay: 0.2s; opacity: 0; }
         .stagger-3 { animation-delay: 0.3s; opacity: 0; }
@@ -62,28 +67,26 @@
         </div>
     </nav>
 
-    <!-- HERO / HEADING -->
-    <div class="pt-28 pb-16 bg-gradient-to-br from-gray-50 to-gray-100">
+    <div class="pt-32 pb-16 bg-gradient-to-br from-gray-50 to-gray-100">
         <div class="max-w-7xl mx-auto px-6 text-center">
             <span class="font-technical text-crimson text-sm tracking-widest uppercase animate-fadeIn">The Minds</span>
-            <h1 class="font-technical text-5xl md:text-6xl font-bold text-charcoal mt-4 mb-6 animate-fadeInUp stagger-1">Leadership</h1>
+            <h1 class="font-technical text-5xl md:text-6xl font-bold text-charcoal mt-4 mb-6 animate-fadeInUp stagger-1">Leadership Team</h1>
             <p class="font-elegant text-xl text-gray-600 max-w-3xl mx-auto animate-fadeInUp stagger-2">
                 Meet the visionaries engineering the circular economy. Our diverse team brings together expertise in technology, operations, finance, marketing, research, and people.
             </p>
         </div>
     </div>
 
-    <!-- LEADERSHIP GRID -->
     <section class="py-24 bg-white">
         <div class="max-w-7xl mx-auto px-6">
-            <!-- The grid container below ensures a 3x2 layout on medium screens and up -->
             <div class="grid md:grid-cols-3 gap-12">
                 <!-- Atiksh -->
                 <div class="text-center group animate-scaleIn stagger-2">
                     <div class="relative inline-block mb-6">
-                        <div class="w-40 h-40 mx-auto bg-gradient-to-br from-red-100 to-red-200 rounded-full flex items-center justify-center text-charcoal font-bold text-4xl group-hover:from-charcoal group-hover:to-gray-800 group-hover:text-white transition-all duration-300 shadow-lg group-hover:shadow-xl">
+                        <div class="w-40 h-40 mx-auto bg-gradient-to-br from-red-100 to-red-200 rounded-full flex items-center justify-center text-charcoal font-bold text-4xl group-hover:from-charcoal group-hover:to-gray-800 group-hover:text-white transition-all duration-300 shadow-xl group-hover:shadow-2xl animate-float">
                             A
                         </div>
+                        <div class="absolute -bottom-2 left-1/2 transform -translate-x-1/2 bg-crimson text-white px-4 py-1 rounded-full text-xs font-technical uppercase tracking-wider">CEO</div>
                     </div>
                     <h3 class="font-bold text-2xl font-technical mb-2">Atiksh</h3>
                     <p class="text-crimson text-sm font-technical mb-4 uppercase tracking-wider">Chief Executive Officer</p>
@@ -95,9 +98,10 @@
                 <!-- Lavitra -->
                 <div class="text-center group animate-scaleIn stagger-3">
                     <div class="relative inline-block mb-6">
-                        <div class="w-40 h-40 mx-auto bg-gradient-to-br from-green-100 to-emerald-200 rounded-full flex items-center justify-center text-forest font-bold text-4xl group-hover:from-forest group-hover:to-green-700 group-hover:text-white transition-all duration-300 shadow-lg group-hover:shadow-xl">
+                        <div class="w-40 h-40 mx-auto bg-gradient-to-br from-green-100 to-emerald-200 rounded-full flex items-center justify-center text-forest font-bold text-4xl group-hover:from-forest group-hover:to-green-700 group-hover:text-white transition-all duration-300 shadow-xl group-hover:shadow-2xl animate-float" style="animation-delay: 0.2s;">
                             L
                         </div>
+                        <div class="absolute -bottom-2 left-1/2 transform -translate-x-1/2 bg-forest text-white px-4 py-1 rounded-full text-xs font-technical uppercase tracking-wider">COO & CTO</div>
                     </div>
                     <h3 class="font-bold text-2xl font-technical mb-2">Lavitra</h3>
                     <p class="text-forest text-sm font-technical mb-4 uppercase tracking-wider">Chief Operating & Technology Officer</p>
@@ -109,9 +113,10 @@
                 <!-- Kamlesh -->
                 <div class="text-center group animate-scaleIn stagger-4">
                     <div class="relative inline-block mb-6">
-                        <div class="w-40 h-40 mx-auto bg-gradient-to-br from-gray-100 to-gray-200 rounded-full flex items-center justify-center text-charcoal font-bold text-4xl group-hover:from-charcoal group-hover:to-gray-800 group-hover:text-white transition-all duration-300 shadow-lg group-hover:shadow-xl">
+                        <div class="w-40 h-40 mx-auto bg-gradient-to-br from-gray-100 to-gray-200 rounded-full flex items-center justify-center text-charcoal font-bold text-4xl group-hover:from-charcoal group-hover:to-gray-800 group-hover:text-white transition-all duration-300 shadow-xl group-hover:shadow-2xl animate-float" style="animation-delay: 0.4s;">
                             K
                         </div>
+                        <div class="absolute -bottom-2 left-1/2 transform -translate-x-1/2 bg-crimson text-white px-4 py-1 rounded-full text-xs font-technical uppercase tracking-wider">CFO</div>
                     </div>
                     <h3 class="font-bold text-2xl font-technical mb-2">Kamlesh</h3>
                     <p class="text-crimson text-sm font-technical mb-4 uppercase tracking-wider">Chief Financial Officer</p>
@@ -120,12 +125,13 @@
                     </p>
                 </div>
 
-                <!-- Srishti (Completed) -->
+                <!-- Srishti -->
                 <div class="text-center group animate-scaleIn stagger-5">
                     <div class="relative inline-block mb-6">
-                        <div class="w-40 h-40 mx-auto bg-gradient-to-br from-green-100 to-emerald-200 rounded-full flex items-center justify-center text-forest font-bold text-4xl group-hover:from-forest group-hover:to-green-700 group-hover:text-white transition-all duration-300 shadow-lg group-hover:shadow-xl">
+                        <div class="w-40 h-40 mx-auto bg-gradient-to-br from-green-100 to-emerald-200 rounded-full flex items-center justify-center text-forest font-bold text-4xl group-hover:from-forest group-hover:to-green-700 group-hover:text-white transition-all duration-300 shadow-xl group-hover:shadow-2xl animate-float" style="animation-delay: 0.6s;">
                             S
                         </div>
+                        <div class="absolute -bottom-2 left-1/2 transform -translate-x-1/2 bg-forest text-white px-4 py-1 rounded-full text-xs font-technical uppercase tracking-wider">CMO</div>
                     </div>
                     <h3 class="font-bold text-2xl font-technical mb-2">Srishti</h3>
                     <p class="text-forest text-sm font-technical mb-4 uppercase tracking-wider">Chief Marketing Officer</p>
@@ -134,12 +140,13 @@
                     </p>
                 </div>
 
-                <!-- Arjun (New) -->
+                <!-- Arjun -->
                 <div class="text-center group animate-scaleIn stagger-6">
                     <div class="relative inline-block mb-6">
-                        <div class="w-40 h-40 mx-auto bg-gradient-to-br from-red-100 to-red-200 rounded-full flex items-center justify-center text-charcoal font-bold text-4xl group-hover:from-charcoal group-hover:to-gray-800 group-hover:text-white transition-all duration-300 shadow-lg group-hover:shadow-xl">
+                        <div class="w-40 h-40 mx-auto bg-gradient-to-br from-red-100 to-red-200 rounded-full flex items-center justify-center text-charcoal font-bold text-4xl group-hover:from-charcoal group-hover:to-gray-800 group-hover:text-white transition-all duration-300 shadow-xl group-hover:shadow-2xl animate-float" style="animation-delay: 0.8s;">
                             A
                         </div>
+                        <div class="absolute -bottom-2 left-1/2 transform -translate-x-1/2 bg-crimson text-white px-4 py-1 rounded-full text-xs font-technical uppercase tracking-wider">CRDO</div>
                     </div>
                     <h3 class="font-bold text-2xl font-technical mb-2">Arjun</h3>
                     <p class="text-crimson text-sm font-technical mb-4 uppercase tracking-wider">Chief Research & Development Officer</p>
@@ -147,13 +154,14 @@
                         Chief Research & Development Officer spearheading breakthrough innovations in pyrolysis technology and sustainable materials science.
                     </p>
                 </div>
-
-                <!-- Jivitesh (New) -->
+                
+                <!-- Jivitesh -->
                 <div class="text-center group animate-scaleIn stagger-6">
                     <div class="relative inline-block mb-6">
-                        <div class="w-40 h-40 mx-auto bg-gradient-to-br from-gray-100 to-gray-200 rounded-full flex items-center justify-center text-charcoal font-bold text-4xl group-hover:from-charcoal group-hover:to-gray-800 group-hover:text-white transition-all duration-300 shadow-lg group-hover:shadow-xl">
+                        <div class="w-40 h-40 mx-auto bg-gradient-to-br from-gray-100 to-gray-200 rounded-full flex items-center justify-center text-charcoal font-bold text-4xl group-hover:from-charcoal group-hover:to-gray-800 group-hover:text-white transition-all duration-300 shadow-xl group-hover:shadow-2xl animate-float" style="animation-delay: 1.0s;">
                             J
                         </div>
+                        <div class="absolute -bottom-2 left-1/2 transform -translate-x-1/2 bg-crimson text-white px-4 py-1 rounded-full text-xs font-technical uppercase tracking-wider">HRD</div>
                     </div>
                     <h3 class="font-bold text-2xl font-technical mb-2">Jivitesh</h3>
                     <p class="text-crimson text-sm font-technical mb-4 uppercase tracking-wider">Human Resources Director</p>
