--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ document.getElementById('contact-form').addEventListener('submit', async functio
   
   try {
     // 2. Send Data to PythonAnywhere
-    const response = await fetch('https://thermowavedynamics.pythonanywhere.com/api/contact', {
+    const response = await fetch('https://thermowavedynamics.pythonanywhere.com/api/contact/', {
       method: 'POST',
       body: formData
     });
@@ -275,4 +275,5 @@ document.getElementById('contact-form').addEventListener('submit', async functio
 </script>
 </body>
 </html>
+
 
