--- a/products.html
+++ b/products.html
@@ -50,6 +50,15 @@
         html { scroll-behavior: smooth; }
         section { scroll-margin-top: 80px; }
         .transition-all { transition: all 0.3s ease; }
+
+        /* CRITICAL VISIBILITY FIX */
+        select {
+            color-scheme: dark !important;
+        }
+        select option {
+            background-color: #1a1a1a !important;
+            color: white !important;
+        }
     </style>
 </head>
 <body class="h-full bg-white font-elegant text-charcoal overflow-x-hidden">
@@ -172,12 +181,17 @@
                 </div>
                 <div>
                     <label class="block font-technical text-sm mb-2">Product Interest</label>
-                    <select name="subject" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white focus:outline-none focus:border-forest transition-colors">
-                        <option value="" disabled selected>Select a product</option>
-                        <option value="Sprout Unit Inquiry">Sprout Unit (Consumer)</option>
-                        <option value="Titan V4 Inquiry">Titan V4 (Industrial)</option>
-                        <option value="General Product Inquiry">General Inquiry</option>
-                    </select>
+                    <div class="relative">
+                        <select name="subject" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white focus:outline-none focus:border-forest transition-colors appearance-none">
+                            <option value="" disabled selected class="bg-charcoal text-white">Select a product</option>
+                            <option value="Sprout Unit Inquiry" class="bg-charcoal text-white">Sprout Unit (Consumer)</option>
+                            <option value="Titan V4 Inquiry" class="bg-charcoal text-white">Titan V4 (Industrial)</option>
+                            <option value="General Product Inquiry" class="bg-charcoal text-white">General Inquiry</option>
+                        </select>
+                        <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-4 text-white">
+                            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+                        </div>
+                    </div>
                 </div>
                 <div>
                     <label class="block font-technical text-sm mb-2">Message</label>
