Remove HTML entities from plastic crisis text

--- a/technology.html
+++ b/technology.html
@@ -62,7 +62,7 @@
                 <span class="font-technical text-crimson text-sm tracking-widest uppercase">The Crisis</span>
                 <h2 class="font-technical text-4xl md:text-5xl font-bold mb-6 mt-2 leading-tight">The Plastic <span class="text-crimson">Dead End</span></h2>
                 <p class="text-gray-300 text-lg leading-relaxed mb-8 font-elegant">
-                    Since the 1950s, humanity has produced over 8.3 billion tons of plastic. Only <span class="text-forest font-bold">9%</span> has been successfully recycled. The rest represents a systemic failure, leaking toxins into our soil and choking our oceans for centuries.
+                    Since the 1950s, humanity has produced over 8.3 billion tons of plastic. Only 9% has been successfully recycled. The rest represents a systemic failure, leaking toxins into our soil and choking our oceans for centuries.
                 </p>
 
                 <div class="grid grid-cols-2 gap-8 border-t border-gray-800 pt-8 mt-8">
@@ -86,7 +86,7 @@
                     </div>
                     <div class="flex justify-between text-xs font-technical text-gray-400 mt-2">
                         <span>Landfill / Ocean / Incineration (91%)</span>
-                        <span class="text-forest font-bold">Recycled (9%)</span>
+                        <span>Recycled (9%)</span>
                     </div>
                     <p class="font-elegant text-sm text-gray-400 mt-4 italic leading-relaxed">
                         "Traditional mechanical recycling is limited by polymer degradation. We need a molecular-level reset."
@@ -108,7 +108,6 @@
 
             
 
-[Image of microwave pyrolysis reactor process]
 
 
             <div class="grid md:grid-cols-3 gap-12 relative">
