--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
                 <div class="text-center pt-4">
                     <button type="submit" id="submit-btn" class="w-full sm:w-auto bg-[#228B22] text-white font-technical font-bold px-16 py-5 rounded-lg hover:bg-green-700 hover:scale-105 active:scale-95 transition-all uppercase tracking-widest">
-                        Transmit Message
+                        Send Query
                     </button>
                 </div>
             </form>
@@ -254,4 +254,5 @@
     </script>
 </body>
 </html>
+
 
