--- a/technology.html
+++ b/technology.html
@@ -37,21 +37,36 @@
             50% { opacity: 0.5; }
         }
         .animate-pulse-soft { animation: pulse-soft 3s infinite; }
+        #mobile-menu.hidden { display: none; }
     </style>
 </head>
-<body class="h-full bg-white font-elegant text-charcoal overflow-x-hidden">
+<body class="min-h-full bg-white font-elegant text-charcoal overflow-x-hidden">
 
     <nav class="fixed top-0 left-0 right-0 z-50 bg-charcoal backdrop-blur-md border-b border-white/10 shadow-lg">
         <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
             <div class="flex items-center gap-3">
                 <span class="font-technical font-bold text-white text-xl tracking-tight">THERMOWAVE DYNAMICS</span>
             </div>
-            <div class="flex items-center gap-6 font-technical text-sm">
+            
+            <div class="hidden md:flex items-center gap-6 font-technical text-sm">
                 <a href="index.html" class="text-white/80 hover:text-white transition-colors">Home</a>
                 <a href="technology.html" class="text-white border-b border-forest">Technology</a>
                 <a href="products.html" class="text-white/80 hover:text-white transition-colors">Products</a>
                 <a href="team.html" class="text-white/80 hover:text-white transition-colors">Team</a>
             </div>
+
+            <button id="menu-btn" class="md:hidden text-white focus:outline-none">
+                <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path id="menu-icon" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                </svg>
+            </button>
+        </div>
+
+        <div id="mobile-menu" class="hidden md:hidden bg-charcoal border-b border-white/10 px-6 py-6 font-technical text-sm flex flex-col gap-6">
+            <a href="index.html" class="text-white/80 hover:text-white text-lg">Home</a>
+            <a href="technology.html" class="text-white text-lg font-bold">Technology</a>
+            <a href="products.html" class="text-white/80 hover:text-white text-lg">Products</a>
+            <a href="team.html" class="text-white/80 hover:text-white text-lg">Team</a>
         </div>
     </nav>
 
@@ -107,7 +122,7 @@
                 </p>
             </div>
 
-            <div class="grid md:grid-cols-3 gap-12 relative">
+            <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-12 relative">
                 <div class="text-center reveal" style="transition-delay: 0.1s;">
                     <div class="w-24 h-24 mx-auto rounded-2xl border-2 border-gray-100 bg-gray-50 flex items-center justify-center mb-6 shadow-sm hover:border-crimson transition-all group">
                         <svg class="w-10 h-10 text-gray-400 group-hover:text-crimson" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4"/></svg>
@@ -166,7 +181,7 @@
     </section>
 
     <section class="py-24 bg-gray-50">
-        <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-3 gap-8">
+        <div class="max-w-7xl mx-auto px-6 grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
             <div class="p-8 bg-white rounded-xl shadow-sm border border-gray-100 hover:shadow-md transition-all reveal">
                 <div class="w-12 h-12 bg-forest/10 rounded-lg flex items-center justify-center mb-6 text-forest font-bold">40%</div>
                 <h3 class="font-technical text-xl font-bold mb-3">Energy Reduction</h3>
@@ -194,20 +209,20 @@
 
             <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6 text-center">
                 <div class="p-6 bg-white/5 rounded-lg border border-white/10 hover:bg-white/10 transition-all reveal">
-                    <div class="text-4xl font-technical font-bold text-white mb-2">15k-30k</div>
-                    <div class="text-gray-400 text-sm uppercase tracking-widest">Tons Plastic Diverted</div>
+                    <div class="text-3xl md:text-4xl font-technical font-bold text-white mb-2">15k-30k</div>
+                    <div class="text-gray-400 text-xs uppercase tracking-widest">Tons Plastic Diverted</div>
                 </div>
                 <div class="p-6 bg-white/5 rounded-lg border border-white/10 hover:bg-white/10 transition-all reveal" style="transition-delay: 0.1s;">
-                    <div class="text-4xl font-technical font-bold text-forest mb-2">3k-8k</div>
-                    <div class="text-gray-400 text-sm uppercase tracking-widest">Tons Biochar Created</div>
+                    <div class="text-3xl md:text-4xl font-technical font-bold text-forest mb-2">3k-8k</div>
+                    <div class="text-gray-400 text-xs uppercase tracking-widest">Tons Biochar Created</div>
                 </div>
                 <div class="p-6 bg-white/5 rounded-lg border border-white/10 hover:bg-white/10 transition-all reveal" style="transition-delay: 0.2s;">
-                    <div class="text-4xl font-technical font-bold text-emerald-400 mb-2">6k-24k</div>
-                    <div class="text-gray-400 text-sm uppercase tracking-widest">Tons CO₂ Sequestered</div>
+                    <div class="text-3xl md:text-4xl font-technical font-bold text-emerald-400 mb-2">6k-24k</div>
+                    <div class="text-gray-400 text-xs uppercase tracking-widest">Tons CO₂ Sequestered</div>
                 </div>
                 <div class="p-6 bg-white/5 rounded-lg border border-white/10 hover:bg-white/10 transition-all reveal" style="transition-delay: 0.3s;">
-                    <div class="text-4xl font-technical font-bold text-yellow-400 mb-2">800-2.5k</div>
-                    <div class="text-gray-400 text-sm">GWh Clean Energy</div>
+                    <div class="text-3xl md:text-4xl font-technical font-bold text-yellow-400 mb-2">800-2.5k</div>
+                    <div class="text-gray-400 text-xs">GWh Clean Energy</div>
                 </div>
             </div>
         </div>
@@ -243,7 +258,7 @@
                 <div id="form-feedback" class="font-technical text-sm mt-4"></div>
 
                 <div class="text-center">
-                    <button type="submit" id="submit-btn" class="bg-forest text-white font-technical font-bold px-12 py-4 hover:bg-green-700 hover:scale-105 transition-all">
+                    <button type="submit" id="submit-btn" class="w-full md:w-auto bg-forest text-white font-technical font-bold px-12 py-4 hover:bg-green-700 hover:scale-105 transition-all uppercase tracking-widest text-xs">
                         Send Message
                     </button>
                 </div>
@@ -251,10 +266,25 @@
         </div>
     </section>
 
-     <footer class="bg-charcoal border-t border-white/10 text-gray-400 py-12 text-center font-technical text-sm">
+     <footer class="bg-charcoal border-t border-white/10 text-gray-400 py-12 text-center font-technical text-xs uppercase tracking-widest px-6">
         <p>© 2026 Thermowave Dynamics. Engineering a Circular Future.</p>
     </footer>
+
     <script>
+        // Hamburger Menu Logic
+        const menuBtn = document.getElementById('menu-btn');
+        const mobileMenu = document.getElementById('mobile-menu');
+        const menuIcon = document.getElementById('menu-icon');
+
+        menuBtn.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+            if (mobileMenu.classList.contains('hidden')) {
+                menuIcon.setAttribute('d', 'M4 6h16M4 12h16M4 18h16');
+            } else {
+                menuIcon.setAttribute('d', 'M6 18L18 6M6 6l12 12');
+            }
+        });
+
         // Reveal Animations Logic
         const observerOptions = { threshold: 0.15 };
         const observer = new IntersectionObserver((entries) => {
@@ -275,7 +305,7 @@
         contactForm.addEventListener('submit', async (e) => {
             e.preventDefault();
             submitBtn.disabled = true;
-            submitBtn.innerText = 'Sending...';
+            submitBtn.innerText = 'SENDING...';
             
             const formData = new FormData(contactForm);
 
@@ -287,19 +317,19 @@
                 const result = await response.json();
 
                 if (result.success) {
-                    feedbackDiv.style.color = '#228B22'; // Forest Green
-                    feedbackDiv.innerText = '✓ Success! Your inquiry has been sent.';
+                    feedbackDiv.style.color = '#228B22'; 
+                    feedbackDiv.innerText = '✓ SUCCESS! YOUR INQUIRY HAS BEEN SENT.';
                     contactForm.reset();
                 } else {
-                    feedbackDiv.style.color = '#C41E3A'; // Crimson
-                    feedbackDiv.innerText = '❌ Error: ' + result.message;
+                    feedbackDiv.style.color = '#C41E3A';
+                    feedbackDiv.innerText = '❌ ERROR: ' + result.message.toUpperCase();
                 }
             } catch (error) {
                 feedbackDiv.style.color = '#C41E3A';
-                feedbackDiv.innerText = '❌ Network error. Please try again later.';
+                feedbackDiv.innerText = '❌ NETWORK ERROR. PLEASE TRY AGAIN.';
             } finally {
                 submitBtn.disabled = false;
-                submitBtn.innerText = 'Send Message';
+                submitBtn.innerText = 'SEND MESSAGE';
             }
         });
     </script>
