--- a/team.html
+++ b/team.html
@@ -98,8 +98,8 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-12 lg:gap-16">
                 <div class="text-center group animate-scaleIn stagger-2">
                     <div class="relative inline-block mb-6">
-                        <div class="w-32 h-32 md:w-40 md:h-40 mx-auto bg-gradient-to-br from-red-100 to-red-200 rounded-full flex items-center justify-center text-charcoal font-bold text-4xl group-hover:from-charcoal group-hover:to-gray-800 group-hover:text-white transition-all duration-300 shadow-xl group-hover:shadow-2xl animate-float">
-                            A
+                        <div class="w-32 h-32 md:w-40 md:h-40 mx-auto rounded-full overflow-hidden shadow-xl group-hover:shadow-2xl animate-float transition-all duration-300">
+                            <img src="AT.jpeg" alt="Atiksh" class="w-full h-full object-cover object-center">
                         </div>
                     </div>
                     <h3 class="font-bold text-2xl font-technical mb-2">Atiksh</h3>
@@ -109,8 +109,8 @@
 
                 <div class="text-center group animate-scaleIn stagger-3">
                     <div class="relative inline-block mb-6">
-                        <div class="w-32 h-32 md:w-40 md:h-40 mx-auto bg-gradient-to-br from-green-100 to-emerald-200 rounded-full flex items-center justify-center text-forest font-bold text-4xl group-hover:from-forest group-hover:to-green-700 group-hover:text-white transition-all duration-300 shadow-xl group-hover:shadow-2xl animate-float" style="animation-delay: 0.2s;">
-                            L
+                        <div class="w-32 h-32 md:w-40 md:h-40 mx-auto rounded-full overflow-hidden shadow-xl group-hover:shadow-2xl animate-float transition-all duration-300" style="animation-delay: 0.2s;">
+                            <img src="LM.jpeg" alt="L" class="w-full h-full object-cover object-center">
                         </div>
                     </div>
                     <h3 class="font-bold text-2xl font-technical mb-2">Lavitra</h3>
@@ -120,8 +120,8 @@
 
                 <div class="text-center group animate-scaleIn stagger-4">
                     <div class="relative inline-block mb-6">
-                        <div class="w-32 h-32 md:w-40 md:h-40 mx-auto bg-gradient-to-br from-gray-100 to-gray-200 rounded-full flex items-center justify-center text-charcoal font-bold text-4xl group-hover:from-charcoal group-hover:to-gray-800 group-hover:text-white transition-all duration-300 shadow-xl group-hover:shadow-2xl animate-float" style="animation-delay: 0.4s;">
-                            K
+                        <div class="w-32 h-32 md:w-40 md:h-40 mx-auto rounded-full overflow-hidden shadow-xl group-hover:shadow-2xl animate-float transition-all duration-300" style="animation-delay: 0.4s;">
+                            <img src="K.jpeg" alt="K" class="w-full h-full object-cover object-center">
                         </div>
                     </div>
                     <h3 class="font-bold text-2xl font-technical mb-2">Kamlesh</h3>
@@ -131,8 +131,8 @@
                 
                 <div class="text-center group animate-scaleIn stagger-5">
                     <div class="relative inline-block mb-6">
-                        <div class="w-32 h-32 md:w-40 md:h-40 mx-auto bg-gradient-to-br from-green-100 to-emerald-200 rounded-full flex items-center justify-center text-forest font-bold text-4xl group-hover:from-forest group-hover:to-green-700 group-hover:text-white transition-all duration-300 shadow-xl group-hover:shadow-2xl animate-float" style="animation-delay: 0.6s;">
-                            S
+                        <div class="w-32 h-32 md:w-40 md:h-40 mx-auto rounded-full overflow-hidden shadow-xl group-hover:shadow-2xl animate-float transition-all duration-300" style="animation-delay: 0.6s;">
+                            <img src="S.jpeg" alt="S" class="w-full h-full object-cover object-center">
                         </div>
                     </div>
                     <h3 class="font-bold text-2xl font-technical mb-2">Srishti</h3>
@@ -142,8 +142,8 @@
 
                 <div class="text-center group animate-scaleIn stagger-6">
                     <div class="relative inline-block mb-6">
-                        <div class="w-32 h-32 md:w-40 md:h-40 mx-auto bg-gradient-to-br from-red-100 to-red-200 rounded-full flex items-center justify-center text-charcoal font-bold text-4xl group-hover:from-charcoal group-hover:to-gray-800 group-hover:text-white transition-all duration-300 shadow-xl group-hover:shadow-2xl animate-float" style="animation-delay: 0.8s;">
-                            A
+                        <div class="w-32 h-32 md:w-40 md:h-40 mx-auto rounded-full overflow-hidden shadow-xl group-hover:shadow-2xl animate-float transition-all duration-300" style="animation-delay: 0.8s;">
+                            <img src="AG.jpeg" alt="A" class="w-full h-full object-cover object-center">
                         </div>
                     </div>
                     <h3 class="font-bold text-2xl font-technical mb-2">Arjun</h3>
@@ -153,8 +153,8 @@
 
                 <div class="text-center group animate-scaleIn stagger-3">
                     <div class="relative inline-block mb-6">
-                        <div class="w-32 h-32 md:w-40 md:h-40 mx-auto bg-gradient-to-br from-green-100 to-emerald-200 rounded-full flex items-center justify-center text-forest font-bold text-4xl group-hover:from-forest group-hover:to-green-700 group-hover:text-white transition-all duration-300 shadow-xl group-hover:shadow-2xl animate-float" style="animation-delay: 1s;">
-                            J
+                        <div class="w-32 h-32 md:w-40 md:h-40 mx-auto rounded-full overflow-hidden shadow-xl group-hover:shadow-2xl animate-float transition-all duration-300" style="animation-delay: 1s;">
+                            <img src="J.jpeg" alt="J" class="w-full h-full object-cover object-center">
                         </div>
                     </div>
                     <h3 class="font-bold text-2xl font-technical mb-2">Jivitesh</h3>
