--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     Forging the <br> <span class="text-transparent bg-clip-text bg-gradient-to-r from-white to-gray-500">Circular Era.</span>
                 </h1>
                 <p class="font-elegant text-gray-400 text-base sm:text-lg lg:text-xl animate-fadeInUp stagger-2 mb-10 leading-relaxed">
-                    Advanced microwave pyrolysis technology that transforms plastic waste into carbon-negative resources.
+                    Building Sustainability for the Future with Low Carbon Fuels.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start animate-fadeInUp stagger-3">
                     <a href="technology.html" class="bg-white text-[#1a1a1a] text-center font-technical font-bold px-10 py-4 hover:bg-gray-200 transition-all uppercase tracking-widest text-sm">View Tech</a>
@@ -254,6 +254,7 @@
     </script>
 </body>
 </html>
+
 
 
 
