--- a/products.html
+++ b/products.html
@@ -162,12 +162,12 @@
                             <div class="mb-6 font-technical text-5xl md:text-7xl font-bold bg-gradient-to-r from-red-500 via-crimson to-red-700 bg-clip-text text-transparent">
                                 TITAN
                             </div>
-                            <h2 class="text-2xl md:text-3xl font-bold mb-4 leading-tight">The Titan V4</h2>
+                            <h2 class="text-2xl md:text-3xl font-bold mb-4 leading-tight">The Titan V1</h2>
                             <p class="text-gray-400 mb-8 font-elegant text-base md:text-lg leading-relaxed">
                                 Industrial-scale pyrolysis for municipalities and large plants. Engineered for heavy-duty circularity.
                             </p>
                             <a href="#contact" class="inline-block w-full py-4 text-center border-2 border-white/20 hover:bg-white hover:text-charcoal transition-all font-technical uppercase text-xs tracking-widest">
-                                Request Specs & Quote
+                                Get a quote for your waste now!
                             </a>
                         </div>
                     </div>
