--- a/products.html
+++ b/products.html
@@ -128,7 +128,7 @@
                                 </div>
                             </div>
                             <a href="#contact" class="inline-block w-full py-4 text-center bg-gradient-to-r from-green-500 to-emerald-600 text-white font-technical uppercase text-xs tracking-widest rounded-lg shadow-xl hover:opacity-90 transition-opacity">
-                                Join Waitlist
+                                Coming Soon!
                             </a>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
                                 Industrial-scale pyrolysis for municipalities and large plants. Engineered for heavy-duty circularity.
                             </p>
                             <a href="#contact" class="inline-block w-full py-4 text-center border-2 border-white/20 hover:bg-white hover:text-charcoal transition-all font-technical uppercase text-xs tracking-widest">
-                                Get a quote for your waste now!
+                                Get a quote
                             </a>
                         </div>
                     </div>
