--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         
         <div class="lg:w-1/2 min-h-[45vh] lg:h-auto bg-gradient-to-br from-green-50 to-emerald-100 nature-grid relative flex items-center justify-center p-12">
             <div class="w-full max-w-[280px] sm:max-w-md aspect-square rounded-full border-8 border-white flex items-center justify-center bg-white shadow-2xl animate-float">
-                <img src="https://i.imgur.com/cHOGqWS.png" alt="Logo" class="w-4/5 h-auto object-contain scale-90">
+                <img src="THERMOWAVE.png" alt="Logo" class="w-4/5 h-auto object-contain scale-90">
             </div>
         </div>
     </header>
@@ -254,6 +254,7 @@
     </script>
 </body>
 </html>
+
 
 
 
